Random ballot voting option
Signed-off-by: Pablo Herrera <pabloherrerapalacio@gmail.com>